Change image object-position to top left to prevent cropping text

--- a/styles.css
+++ b/styles.css
@@ -340,7 +340,7 @@ h1, h2, h3, h4, .logo {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: top center;
+    object-position: top left;
     display: block;
 }
 
